--- a/apps/merkle_patricia_tree/.circleci/config.yml
+++ b/apps/merkle_patricia_tree/.circleci/config.yml
@@ -1,10 +1,17 @@
 jobs:
   build:
-    working_directory: ~/ex_rlp
+    working_directory: ~/merkle_patricia_tree
     docker:
       - image: elixir:latest
     steps:
       - checkout
+      - restore_cache:
+          key: _build
       - run: mix local.hex --force
       - run: mix deps.get
       - run: mix test
+      - run: mix dialyzer
+      - save_cache:
+          key: _build
+          paths:
+            - _build
