--- a/apps/merkle_patricia_tree/.circleci/config.yml
+++ b/apps/merkle_patricia_tree/.circleci/config.yml
@@ -8,6 +8,7 @@ jobs:
       - restore_cache:
           key: _build
       - run: mix local.hex --force
+      - run: mix local.rebar --force
       - run: mix deps.get
       - run: mix test
       - run: mix dialyzer
