--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "ethereum_common_tests"]
-	path = test/support/ethereum_common_tests
+	path = ethereum_common_tests
 	url = git@github.com:ethereum/tests.git
