Add --trace to tests to debug why they fail in CI

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,5 +47,5 @@ jobs:
           key: v1-build-cache
           paths: "_build"
 
-      - run: mix test --exclude network
+      - run: mix test --exclude network --trace
 
