Add dialyzer to umbrella app to run it in CI config
Excludes running it in evm app for test environment

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,3 +48,4 @@ jobs:
           paths: "_build"
 
       - run: elixir --erl "+hmax 33554432" -S mix test --exclude network
+      - run: mix dialyzer --halt-exit-status
