--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,10 +14,15 @@ jobs:
       - checkout
       - run: git submodule sync --recursive
       - run: git submodule update --recursive --init
+      - run: curl https://sh.rustup.rs -sSf | sh -s -- -y
+      - run: echo 'export PATH=~/.cargo/bin:$PATH' >> $BASH_ENV
 
       - run: mix local.hex --force
       - run: mix local.rebar --force
 
+      - restore_cache:
+          keys:
+            - v1-env-cache-{{ arch }}-{{ .Branch }}
       - restore_cache:
           keys:
             - v1-mix-cache-{{ .Branch }}-{{ checksum "mix.lock" }}
@@ -31,6 +36,11 @@ jobs:
       - run: mix do deps.get, compile
       - run: cd deps/libsecp256k1 && rebar compile
 
+      - save_cache:
+          key: v1-env-cache-{{ arch }}-{{ .Branch }}
+          paths:
+            - $HOME/.cargo
+            - $HOME/.rustup
       - save_cache:
           key: v1-mix-cache-{{ .Branch }}-{{ checksum "mix.lock" }}
           paths: "deps"
