--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,6 +2,7 @@ version: 2
 jobs:
   build:
     parallelism: 1
+    resource_class: large
     docker:
       - image: circleci/elixir:1.6
         environment:
