--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -75,6 +75,8 @@ jobs:
           paths:
             - _build
             - ~/.mix
+            - $HOME/.cargo
+            - $HOME/.rustup
 
       - run: mix dialyzer --halt-exit-status
 
