Add a bin/setup script and update README
Adds a bin/setup script to install dependencies and updates the README
with more detailed instructions for setup and testing

Other Changes:

* Add instructions for running `sync_with_infura`
* Set rebar as manager for libsecp256k1
* Depend of poanetwork/rox#update-erlang_nif-sys

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,6 @@ apps/*/config/dev.exs
 # Ignore generated code from yecc and leex
 *_lexer.erl
 *_parser.erl
+
+# Ignore secret files
+apps/blockchain/config/dev.secret.exs
