--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -129,6 +129,8 @@ jobs:
       - attach_workspace:
            at: .
 
+      - run: mix local.hex --force
+
       - run: mix format --check-formatted
 
   credo:
