--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -71,6 +71,7 @@ jobs:
             - .git
             - .gitignore
             - _build
+            - .credo.exs
             - apps
             - bin
             - config
