Double `no_output_timeout` for tests in CI
According to CircleCI docs, `no_output_timeout` defaults to 10 mins.
We double it here to 20 minutes.

Reference: https://circleci.com/docs/2.0/configuration-reference/

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -79,7 +79,9 @@ jobs:
           key: v1-build-cache
           paths: "_build"
 
-      - run: mix test --exclude network --exclude pending
+      - run:
+          command: mix test --exclude network --exclude pending
+          no_output_timeout: "20m"
 
       - persist_to_workspace:
           root: .
