--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,15 +11,7 @@ jobs:
     working_directory: ~/app
 
     steps:
-      - run: sudo apt-get update; sudo apt-get -y install libtool autoconf libgmp3-dev
       - checkout
-      - run: git submodule sync --recursive
-      - run: git submodule update --recursive --init
-      - run: curl https://sh.rustup.rs -sSf | sh -s -- -y
-      - run: echo 'export PATH=~/.cargo/bin:$PATH' >> $BASH_ENV
-
-      - run: mix local.hex --force
-
       - restore_cache:
           keys:
             - v1-env-cache-{{ arch }}-{{ .Branch }}
@@ -37,9 +29,8 @@ jobs:
             - v1-build-cache-{{ .Branch }}
             - v1-build-cache
 
-      - run:
-          command: mix do deps.get, compile
-          no_output_timeout: 2400
+      - run: ./bin/setup
+        no_output_timeout: 2400
 
       - save_cache:
           key: v1-env-cache-{{ arch }}-{{ .Branch }}
