--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,6 +29,8 @@ jobs:
             - v1-build-cache-{{ .Branch }}
             - v1-build-cache
 
+      - run: echo 'export PATH=~/.cargo/bin:$PATH' >> $BASH_ENV
+
       - run:
           command: ./bin/setup
           no_output_timeout: 2400
