--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,6 +12,9 @@ jobs:
 
     steps:
       - checkout
+      - run: git submodule sync --recursive
+      - run: git submodule update --recursive --init
+
       - restore_cache:
           keys:
             - v1-env-cache-{{ arch }}-{{ .Branch }}
