--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,15 +11,9 @@ jobs:
     working_directory: ~/app
 
     steps:
-      - run: sudo apt-get update; sudo apt-get -y install libtool autoconf libgmp3-dev
       - checkout
       - run: git submodule sync --recursive
       - run: git submodule update --recursive --init
-      - run: curl https://sh.rustup.rs -sSf | sh -s -- -y
-      - run: echo 'export PATH=~/.cargo/bin:$PATH' >> $BASH_ENV
-
-      - run: mix local.hex --force
-      - run: mix local.rebar --force
 
       - restore_cache:
           keys:
@@ -38,11 +32,11 @@ jobs:
             - v1-build-cache-{{ .Branch }}
             - v1-build-cache
 
-      - run:
-          command: mix do deps.get, compile
-          no_output_timeout: 2400
+      - run: echo 'export PATH=~/.cargo/bin:$PATH' >> $BASH_ENV
 
-      - run: cd deps/libsecp256k1 && rebar compile
+      - run:
+          command: ./bin/setup
+          no_output_timeout: 2400
 
       - save_cache:
           key: v1-env-cache-{{ arch }}-{{ .Branch }}
