Parallelize tests by separating blockchain/state_tests
What changed?
=============

We parallelize the builds by separating the blockchain common tests and
state tests into their own builds and then the rest of the tests into
another build.

We could use some other CircleCI features such as `--split-by=timings`,
but since we only have two tests that take a really long time, and we
know which tests those are, it seems simpler to separate those two tests
into their own containers.

From a very limited set of data, it seems like this saves us ~9 minutes
on a single build run.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2
 jobs:
   build:
-    parallelism: 1
+    parallelism: 3
     resource_class: large
     docker:
       - image: circleci/elixir:1.7.2
@@ -78,7 +78,10 @@ jobs:
           paths: "_build"
 
       - run:
-          command: mix test --exclude network --exclude pending
+          name: Run Tests
+          command: |
+            echo "Running in node $CIRCLE_NODE_INDEX"
+            bin/test_command_for_node $CIRCLE_NODE_INDEX
           no_output_timeout: "20m"
 
       - persist_to_workspace:
