use ipc client for synchronisation (#482)
* use ipc client for synchronisation

* fix formatting

* add empty line

--- a/apps/blockchain/config/dev.secret.exs.example
+++ b/apps/blockchain/config/dev.secret.exs.example
@@ -1,2 +1,6 @@
 use Mix.Config
-config :ethereumex, url: "https://mainnet.infura.io/<your api key here>"
+
+config :ethereumex,
+  url: "https://mainnet.infura.io/<your api key here>",
+  ipc_path: "/.local/share/io.parity.ethereum/jsonrpc.ipc",
+  client_type: :ipc
