try just adding to persistence

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -97,6 +97,7 @@ jobs:
             - mix.exs
             - mix.lock
             - chains
+            - ethereum_common_tests
 
   test:
     docker:
@@ -109,8 +110,6 @@ jobs:
     steps:
       - attach_workspace:
            at: .
-      - run: git submodule sync --recursive
-      - run: git submodule update --recursive --init
 
       - run: mix local.hex --force
       - run: mix local.rebar --force
@@ -145,8 +144,6 @@ jobs:
     steps:
       - attach_workspace:
            at: .
-      - run: git submodule sync --recursive
-      - run: git submodule update --recursive --init
 
       - run: mix local.hex --force
       - run: mix local.rebar --force
