--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,8 +1,6 @@
 version: 2
 jobs:
   build:
-    parallelism: 3
-    resource_class: large
     docker:
       - image: circleci/elixir:1.7.2
         environment:
@@ -78,11 +76,8 @@ jobs:
           paths: "_build"
 
       - run:
-          name: Run Tests
-          command: |
-            echo "Running in node $CIRCLE_NODE_INDEX"
-            bin/test_command_for_node $CIRCLE_NODE_INDEX
-          no_output_timeout: "20m"
+          name: Compile
+          command: mix compile
 
       - persist_to_workspace:
           root: .
@@ -102,6 +97,279 @@ jobs:
             - mix.exs
             - mix.lock
             - chains
+            - ethereum_common_tests
+
+  test:
+    docker:
+      - image: circleci/elixir:1.7.2
+        environment:
+          MIX_ENV: test
+
+    working_directory: ~/app
+
+    steps:
+      - attach_workspace:
+           at: .
+
+      - run: mix local.hex --force
+      - run: mix local.rebar --force
+
+      - restore_cache:
+          keys:
+            - v4-build-cache-{{ .Branch }}
+            - v4-build-cache
+
+      - restore_cache:
+          keys:
+            - v4-mix-cache-{{ .Branch }}-{{ checksum "mix.lock" }}
+            - v4-mix-cache-{{ .Branch }}
+            - v4-mix-cache
+
+      - restore_cache:
+          keys:
+            - v4-env-cache-{{ arch }}-{{ .Branch }}
+            - v4-env-cache-{{ .Branch }}
+            - v4-env-cache
+
+      - run: mix test --exclude pending
+
+  Frontier:
+    docker:
+      - image: circleci/elixir:1.7.2
+        environment:
+          MIX_ENV: test
+
+    working_directory: ~/app
+
+    steps:
+      - attach_workspace:
+           at: .
+
+      - run: mix local.hex --force
+      - run: mix local.rebar --force
+
+      - restore_cache:
+          keys:
+            - v4-build-cache-{{ .Branch }}
+            - v4-build-cache
+
+      - restore_cache:
+          keys:
+            - v4-mix-cache-{{ .Branch }}-{{ checksum "mix.lock" }}
+            - v4-mix-cache-{{ .Branch }}
+            - v4-mix-cache
+
+      - restore_cache:
+          keys:
+            - v4-env-cache-{{ arch }}-{{ .Branch }}
+            - v4-env-cache-{{ .Branch }}
+            - v4-env-cache
+
+      - run: mix cmd --app blockchain mix test --exclude test --include Frontier
+
+  Homestead:
+    docker:
+      - image: circleci/elixir:1.7.2
+        environment:
+          MIX_ENV: test
+
+    working_directory: ~/app
+
+    steps:
+      - attach_workspace:
+           at: .
+
+      - run: mix local.hex --force
+      - run: mix local.rebar --force
+
+      - restore_cache:
+          keys:
+            - v4-build-cache-{{ .Branch }}
+            - v4-build-cache
+
+      - restore_cache:
+          keys:
+            - v4-mix-cache-{{ .Branch }}-{{ checksum "mix.lock" }}
+            - v4-mix-cache-{{ .Branch }}
+            - v4-mix-cache
+
+      - restore_cache:
+          keys:
+            - v4-env-cache-{{ arch }}-{{ .Branch }}
+            - v4-env-cache-{{ .Branch }}
+            - v4-env-cache
+
+      - run: mix cmd --app blockchain mix test --exclude test --include Homestead
+
+  HomesteadToDaoAt5:
+    docker:
+      - image: circleci/elixir:1.7.2
+        environment:
+          MIX_ENV: test
+
+    working_directory: ~/app
+
+    steps:
+      - attach_workspace:
+           at: .
+
+      - run: mix local.hex --force
+      - run: mix local.rebar --force
+
+      - restore_cache:
+          keys:
+            - v4-build-cache-{{ .Branch }}
+            - v4-build-cache
+
+      - restore_cache:
+          keys:
+            - v4-mix-cache-{{ .Branch }}-{{ checksum "mix.lock" }}
+            - v4-mix-cache-{{ .Branch }}
+            - v4-mix-cache
+
+      - restore_cache:
+          keys:
+            - v4-env-cache-{{ arch }}-{{ .Branch }}
+            - v4-env-cache-{{ .Branch }}
+            - v4-env-cache
+
+      - run: mix cmd --app blockchain mix test --exclude test --include HomesteadToDaoAt5
+
+  TangerineWhistle:
+    docker:
+      - image: circleci/elixir:1.7.2
+        environment:
+          MIX_ENV: test
+
+    working_directory: ~/app
+
+    steps:
+      - attach_workspace:
+           at: .
+
+      - run: mix local.hex --force
+      - run: mix local.rebar --force
+
+      - restore_cache:
+          keys:
+            - v4-build-cache-{{ .Branch }}
+            - v4-build-cache
+
+      - restore_cache:
+          keys:
+            - v4-mix-cache-{{ .Branch }}-{{ checksum "mix.lock" }}
+            - v4-mix-cache-{{ .Branch }}
+            - v4-mix-cache
+
+      - restore_cache:
+          keys:
+            - v4-env-cache-{{ arch }}-{{ .Branch }}
+            - v4-env-cache-{{ .Branch }}
+            - v4-env-cache
+
+      - run: mix cmd --app blockchain mix test --exclude test --include TangerineWhistle
+
+  SpuriousDragon:
+    docker:
+      - image: circleci/elixir:1.7.2
+        environment:
+          MIX_ENV: test
+
+    working_directory: ~/app
+
+    steps:
+      - attach_workspace:
+           at: .
+
+      - run: mix local.hex --force
+      - run: mix local.rebar --force
+
+      - restore_cache:
+          keys:
+            - v4-build-cache-{{ .Branch }}
+            - v4-build-cache
+
+      - restore_cache:
+          keys:
+            - v4-mix-cache-{{ .Branch }}-{{ checksum "mix.lock" }}
+            - v4-mix-cache-{{ .Branch }}
+            - v4-mix-cache
+
+      - restore_cache:
+          keys:
+            - v4-env-cache-{{ arch }}-{{ .Branch }}
+            - v4-env-cache-{{ .Branch }}
+            - v4-env-cache
+
+      - run: mix cmd --app blockchain mix test --exclude test --include SpuriousDragon
+
+  Byzantium:
+    docker:
+      - image: circleci/elixir:1.7.2
+        environment:
+          MIX_ENV: test
+
+    working_directory: ~/app
+
+    steps:
+      - attach_workspace:
+           at: .
+
+      - run: mix local.hex --force
+      - run: mix local.rebar --force
+
+      - restore_cache:
+          keys:
+            - v4-build-cache-{{ .Branch }}
+            - v4-build-cache
+
+      - restore_cache:
+          keys:
+            - v4-mix-cache-{{ .Branch }}-{{ checksum "mix.lock" }}
+            - v4-mix-cache-{{ .Branch }}
+            - v4-mix-cache
+
+      - restore_cache:
+          keys:
+            - v4-env-cache-{{ arch }}-{{ .Branch }}
+            - v4-env-cache-{{ .Branch }}
+            - v4-env-cache
+
+      - run: mix cmd --app blockchain mix test --exclude test --include Byzantium
+
+  Constantinople:
+    docker:
+      - image: circleci/elixir:1.7.2
+        environment:
+          MIX_ENV: test
+
+    working_directory: ~/app
+
+    steps:
+      - attach_workspace:
+           at: .
+
+      - run: mix local.hex --force
+      - run: mix local.rebar --force
+
+      - restore_cache:
+          keys:
+            - v4-build-cache-{{ .Branch }}
+            - v4-build-cache
+
+      - restore_cache:
+          keys:
+            - v4-mix-cache-{{ .Branch }}-{{ checksum "mix.lock" }}
+            - v4-mix-cache-{{ .Branch }}
+            - v4-mix-cache
+
+      - restore_cache:
+          keys:
+            - v4-env-cache-{{ arch }}-{{ .Branch }}
+            - v4-env-cache-{{ .Branch }}
+            - v4-env-cache
+
+      - run: mix cmd --app blockchain mix test --exclude test --include Constantinople
 
   dialyzer:
     docker:
@@ -216,11 +484,24 @@ workflows:
     jobs:
       - build
       - credo:
-          requires:
-            - build
+          requires: [build]
       - check_formatted:
-          requires:
-            - build
+          requires: [build]
       - dialyzer:
-          requires:
-            - build
+          requires: [build]
+      - test:
+          requires: [build]
+      - Frontier:
+          requires: [build]
+      - Homestead:
+          requires: [build]
+      - HomesteadToDaoAt5:
+          requires: [build]
+      - TangerineWhistle:
+          requires: [build]
+      - SpuriousDragon:
+          requires: [build]
+      - Byzantium:
+          requires: [build]
+      - Constantinople:
+          requires: [build]
