--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -489,10 +489,15 @@ jobs:
 
     steps:
       - attach_workspace:
-          at: .
-
-      - run: mix release
-
+           at: .
+      - run: curl https://sh.rustup.rs -sSf | sh -s -- -y
+      - run: echo 'export PATH=~/.cargo/bin:$PATH' >> $BASH_ENV
+      - run: mix local.hex --force
+      - run: mix local.rebar --force
+      - run: mix release --verbose
+      - store_artifacts:
+          path: _build/dev/rel/mana/
+          destination: _build/dev/rel/mana/
 
 workflows:
   version: 2
@@ -506,6 +511,8 @@ workflows:
       - dialyzer:
           requires: [build]
       - test:
+          requires: [build]
+      - release:
           requires: [build]
       - Frontier:
           requires: [build]
