--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ jobs:
       - image: circleci/elixir:1.7.2
         environment:
           MIX_ENV: test
-
+    resource_class: large
     working_directory: ~/app
 
     steps:
@@ -484,7 +484,7 @@ jobs:
       - image: circleci/elixir:1.7.2
         environment:
           MIX_ENV: dev
-
+    resource_class: large
     working_directory: ~/app
 
     steps:
